tests/rt/pos/core/prettyChecker.femto
let fun id x = x
in
  id id id
end
