tests/rt/neg/core/pattern01.femto
let val (x,5) = (10,2) in x end 
